Add data inizializer/upgrader declarative context parameters